--- a/Source/PowerAppsCMS/PowerAppsCMS.csproj
+++ b/Source/PowerAppsCMS/PowerAppsCMS.csproj
@@ -269,7 +269,7 @@
     <Compile Include="Models\DataZemesFail.cs">
       <DependentUpon>PowerAppsCMS.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ErrorMassageLogin.cs" />
+    <Compile Include="Models\ErrorHandleLogin.cs" />
     <Compile Include="Models\Feedback.cs">
       <DependentUpon>PowerAppsCMS.tt</DependentUpon>
     </Compile>
